force-app/main/default/objects/PSA_Settings__c/PSA_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>PSA Settings</label>
</CustomObject>