force-app/main/default/objects/PSA_Settings__c/fields/Notification_OWD__c.field-meta.xml
<CustomField>
    <fullName>Notification_OWD__c</fullName>
    <description>Organisation Wide Default email address for the notification email</description>
    <label>Notification OWD</label>
    <length>199</length>
    <type>Text</type>
</CustomField>