force-app/main/default/objects/PSA_Settings__c/fields/Program_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Program_Manager_Email__c</fullName>
    <label>Program Manager Email</label>
    <type>Email</type>
</CustomField>