force-app/main/default/objects/PSA_Settings__c/fields/Project_Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>Project_Notification_Template__c</fullName>
    <description>Template name for Project Notification Email</description>
    <label>Project Notification Template</label>
    <length>199</length>
    <type>Text</type>
</CustomField>